--- a/main.tex
+++ b/main.tex
@@ -16,7 +16,7 @@ The abstract text goes here.
 Here is the text of your introduction.
 
 \section{Model}
-
+The idea
 \section{Result}
 \section{Discussion}
 
